Avoid flickers on embed mode

--- a/lhc_web/design/defaulttheme/css/widgetv2/embed.css
+++ b/lhc_web/design/defaulttheme/css/widgetv2/embed.css
@@ -2,11 +2,6 @@ body, .desktop-body {
     background-color: transparent!important;
 }
 
-.message-send-area{
-    border-radius: 20px;
-    border:1px solid #dee2e6!important;
-}
-
 .bottom-message {
     padding-bottom: 5px;
 }
